<resources>
    <string name="app_name">AndroidDemoProject</string>
    <string name="activity_fragments_intents">Activity, Fragments, Intents</string>
    <string name="explicit_intent_open_demo_browser_with_uri">Explicit Intent (Open Demo Browser with Uri)</string>
    <string name="enter_something_to_search">Enter something to search</string>
    <string name="explicit_intent_open_android_lifecycle_activity">Explicit Intent (Open Android Lifecycle Activity)</string>
    <string name="implicit_intent_open_uri">Implicit Intent (Open Uri)</string>
    <string name="share_search_query_as_text">Share search query as text</string>
    <string name="test_string">Hello World</string>
    <string name="enter_new_query">Enter new query</string>
    <string name="return_back_with_new_query">Return back with new query!</string>
    <string name="pick_image_from_gallery">Pick Image from Gallery</string>
    <string name="get_new_query_from_another_activity">Get new query from another activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_fragment">Add Fragment</string>
    <string name="remove_fragment">Remove Fragment</string>
    <string name="replace_fragment">Replace Fragment</string>
    <string name="also_add_to_backstack">Also add to Backstack</string>
    <string name="fragment_b">Fragment B</string>
    <string name="fragment_a">Fragment A</string>
    <string name="enter_something_to_pass_to_another_fragment">Enter something to pass to another fragment</string>
    <string name="send_data">Send data</string>
    <string name="by_interface_and_listeners"><![CDATA[By Interface & Listeners]]></string>
    <string name="by_fragment_manager">By Fragment Manager</string>
    <string name="fragment_d">Fragment D</string>
    <string name="by_shared_view_model">By Shared View Model</string>
    <string name="fragment_f">Fragment F</string>
    <string name="click_to_start_pending_intent">Click to start pending intent in 5 secs\n[Alarm Manager]</string>
    <string name="pending_intent_destination_activity">Pending Intent Destination Activity</string>
    <string name="send_notification">Send Notification</string>
    <string name="cancel_notification">Cancel Notification</string>
    <string name="click_to_cancel_pending_intent">Click to Cancel Pending Intent</string>
    <string name="other_important_views">Other Important Views</string>
    <string name="search">Search</string>
    <string name="very_long_text">
        start - Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        Lorem Ipsum is simply dummy text of the printing\n
        end - Lorem Ipsum is simply dummy text of the printing\n
    </string>
    <string name="open_youtube">Open Youtube</string>
    <string name="open_google">Open Google</string>
    <string name="load_custom_html_data">Load Custom HTML Data</string>
    <string name="show_bottom_sheet">Show Bottom Sheet</string>
    <string name="show_material_bottom_sheet">Show material bottom sheet</string>
    <string name="web_services">Web Services</string>
    <string name="email">Email</string>
    <string name="terms_of_use_privacy_policy">Terms of use. Privacy Policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="design_main_heading">DESIGN</string>
    <string name="design_sub_heading">PARTICLE</string>
    <string name="design_particle_logo">design particle logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="upload_image">Upload Image</string>
    <string name="download_large_file">Download Large File</string>
    <string name="avatar">Avatar</string>
    <string name="create_user">Create User</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras augue ligula, vulputate nec tristique in, ullamcorper at nibh. Morbi sed odio convallis, consequat erat non, volutpat turpis. Sed vitae eros faucibus, malesuada tellus sed, elementum orci. Nullam tincidunt interdum arcu a feugiat. Duis convallis non magna sit amet luctus. Duis faucibus orci vitae lorem laoreet sagittis. Maecenas a eleifend diam. Aenean hendrerit sem ut nisi iaculis varius. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Curabitur lobortis lorem interdum erat ultrices, sed tempus elit feugiat. Aliquam placerat ipsum id faucibus rhoncus. Donec lobortis, risus nec pellentesque bibendum, tellus dui finibus velit, a feugiat dolor mi ac lacus. Pellentesque aliquet commodo justo a venenatis. Cras feugiat est non velit molestie accumsan ac nec enim.\n\nCurabitur semper laoreet urna in lobortis. Suspendisse ut placerat ipsum, mollis accumsan odio. Nunc molestie iaculis arcu in hendrerit. Pellentesque bibendum nibh non erat fringilla varius. Quisque pharetra, ipsum nec convallis tempor, metus magna tristique diam, id dapibus nunc lorem ut nisi. In sollicitudin, felis eu tincidunt vehicula, enim ligula vehicula neque, non vestibulum erat elit ut orci. Fusce leo tortor, maximus ut pretium ut, tempor quis ligula. Morbi rutrum sapien a convallis efficitur. Duis dapibus vestibulum elit et eleifend.\n\nDuis vehicula convallis diam, non aliquet nisi vestibulum eu. Suspendisse ac risus eget elit sodales consequat vel ac eros. Maecenas in gravida arcu, non ullamcorper risus. Integer varius, eros ut commodo aliquet, augue nulla eleifend massa, ac lobortis orci magna ac ligula. Proin orci nisi, laoreet non eros varius, dictum vulputate augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam nulla dui, ultrices vitae sapien a, rhoncus rutrum mauris. Nullam placerat quis lorem in dapibus. Suspendisse ac ipsum posuere, dignissim justo ut, sodales orci. Proin nisl odio, ornare vitae arcu a, commodo fringilla tortor. Nam aliquet vel justo et lobortis. Etiam at tempor felis. Sed at rutrum orci. In venenatis mi nec nunc faucibus, quis consequat turpis convallis. Aenean semper ante vitae nisi fermentum, at finibus eros aliquam. Nulla ac facilisis ante, at scelerisque elit.\n\nEtiam tempor ut justo nec aliquam. Duis neque tortor, mollis non tempor id, iaculis nec elit. Nullam ullamcorper, urna vitae venenatis rhoncus, risus purus aliquam libero, in ultrices nisl ex et eros. Nulla facilisi. Integer ut posuere sapien. Maecenas tincidunt justo, non pretium orci dictum eget. Duis vulputate neque quam, ac fringilla augue tempor vitae. Nulla non augue cursus, auctor turpis ut, malesuada nisi. Sed quis nibh turpis. Donec ex est, porta in lorem a, fermentum porttitor dui. Maecenas faucibus egestas dapibus. Ut quis tellus viverra, ultrices quam rutrum, lacinia sapien. Sed blandit magna ut leo fringilla, sit amet vehicula nulla mattis.\n\nMaecenas eget metus feugiat, laoreet tellus nec, facilisis mi. Phasellus enim eros, ornare vel pellentesque ac, posuere rutrum mi.</string>
    <string name="app_bar_fab_content_description">Android</string>
    <string name="material_button">Material Button</string>
    <string name="go">GO</string>
    <string name="gradient_button">Gradient Button</string>
    <string name="app_compact_button">App compact Button</string>
    <string name="material_text_view">Material Text View</string>
    <string name="multi_style_text">Multi style text</string>
    <string name="adding_drawables_with_text">Adding Drawables with Text</string>
    <string name="increased_letter_spacing">Increased Letter Spacing</string>
    <string name="display2_amp_shadow"><![CDATA[Display2 & Shadow]]></string>
    <string name="teal_color_all_caps">Teal Color All Caps</string>
    <string name="big_centred_text">Big Centred Text</string>
    <string name="italic_text">Italic Text</string>
    <string name="bold_text">Bold Text</string>
    <string name="text_styles">Text Styles</string>
    <string name="serif">Serif</string>
    <string name="sans">Sans</string>
    <string name="normal">Normal</string>
    <string name="monospaced">Monospaced</string>
    <string name="font_faces">Font Faces</string>
    <string name="views">Views</string>
    <string name="toasts">Toasts</string>
    <string name="ripple_animation">Ripple Animation</string>
    <string name="snack_bars">Snack Bars</string>
    <string name="tab_layout">Tab Layout</string>
    <string name="app_bar_layout">App Bar Layout</string>
    <string name="screens">Screens</string>
    <string name="text_view">Text View</string>
    <string name="edit_text">Edit Text</string>
    <string name="button">Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="radio_button">Radio Button</string>
    <string name="floating_action_button">Floating Action Button</string>
    <string name="chips">Chips</string>
    <string name="progress_bar">Progress bar</string>
    <string name="layouts">Layouts</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_6">6</string>
    <string name="date_picker">Date Picker</string>
    <string name="spinner">Spinner</string>
    <string name="seekbar">Seekbar</string>
    <string name="user_id">User Id</string>
    <string name="location">Location</string>
    <string name="is_active">isActive</string>
    <string name="user_details_table">User Details Table</string>
    <string name="no">No</string>
    <string name="mumbai_maharashtra">Mumbai, Maharashtra</string>
    <string name="shubham_dusane">Shubham Dusane</string>
    <string name="_3489">3489</string>
    <string name="banglore_karnataka">Banglore, Karnataka</string>
    <string name="pratik_sharma">Pratik Sharma</string>
    <string name="_3009">3009</string>
    <string name="ahmedabad_gujarat">Ahmedabad, Gujarat</string>
    <string name="dev_mehta">Dev Mehta</string>
    <string name="_1939">1939</string>
    <string name="vadodara_gujarat">Vadodara, Gujarat</string>
    <string name="gopal_sharma">Gopal Sharma</string>
    <string name="_1995">1995</string>
    <string name="_1225">1225</string>
    <string name="ankit_verma">Ankit Verma</string>
    <string name="grid_layout_example">Grid Layout Example</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="navigation">Navigation</string>
</resources>