<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiwidgets.UIWidgets">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/views"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/layouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layouts"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/toasts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toasts"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/rippleAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ripple_animation"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/snackBars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snack_bars"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/tabLayoutActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_layout"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_bar_layout"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_picker"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/screens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screens"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigation"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>